--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "keywords": ["robo", "task", "bdd"],
   "require": {
     "php": ">=5.4.0",
-    "codegyre/robo": "~0.5"
+    "codegyre/robo": "~0.5",
+    "guzzlehttp/guzzle": "~5.0"
   },
   "license": "GPL-2.0+",
   "authors": [
